# covid_seasonal_Sharma

./: README.md  pyproject.toml
data/: brauner_data_final_nov_temperate_north.csv  modelSharma_dataSharma_countryMobility_GrocTransWork.csv  modelSharma_dataSharma_countryMobility_GrocTransWorkResid.csv  modelSharma_dataSharma_countryMobility_RecreGrocTransWorkResid.csv
epimodel/: epiparam.py  preprocessing.py  script_utils.py
epimodel/models/: model_build_utils.py  model_run_utils.py  models.py  models_ext.py
notebooks/data_preprocessing/: merge_mobility.ipynb
notebooks/final_results/: seasonality_Rt_plotter.ipynb  seasonality_SA_noNPIs_plotter.ipynb  seasonality_SA_plotter.ipynb  seasonality_SA_plotter_extended_validation.ipynb  seasonality_SA_plotter_fourier_interactions.ipynb  seasonality_combined_samples_variable_maxRday.csv  seasonality_plotter.ipynb  seasonality_result_local_plotter.ipynb  seasonality_result_mobility_plotter.ipynb  seasonality_result_plotter.ipynb
scripts/: convert_m2b.py  run_stats.py  sensitivity_dispatcher.py
scripts/sensitivity_analysis/: basic_R_hyperprior.py  basic_R_prior.py  default.py  model_configs.yaml  seasonality.py  seasonality_basic_R_hyperprior.py  seasonality_ext.py  sensitivity_analysis.yaml
